k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sales-crm
  labels:
    name: sales-crm
    app: sales-crm-application
